tests/files/flow_controller_tests/should_fail/033.cmdr
x = false;
print floor(x);